--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "workspaces": ["packages/*"],
   "scripts": {
     "postinstall": "husky install",
+    "lint": "biome check",
     "publish": "lerna publish from-package"
   },
   "devDependencies": {
