--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -4,7 +4,9 @@
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
   "main": "src/index.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json",
@@ -39,7 +41,10 @@
       ]
     },
     "testRegex": "(/src/.*|(\\.|/)(test|spec)+)\\.test\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["js", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
     "preset": "ts-jest"
   }
 }
