--- a/biome.json
+++ b/biome.json
@@ -7,9 +7,7 @@
     "enabled": true,
     "formatWithErrors": false,
     "indentStyle": "space",
-    "indentWidth": 2,
-    "lineEnding": "lf",
-    "attributePosition": "auto"
+    "indentWidth": 2
   },
   "organizeImports": {
     "enabled": true
