--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json",
-    "test": "jest"
+    "test": "hardhat test"
   },
   "dependencies": {
     "@morpho-org/blue-sdk": "workspace:*",
@@ -22,32 +22,24 @@
   },
   "devDependencies": {
     "@morpho-org/morpho-test": "workspace:*",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@types/chai": "^4.3.14",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.8",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "chai": "^4.3.10",
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.22.6",
+    "hardhat-deal": "^3.1.0",
+    "mocha": "^10.4.0",
+    "sinon": "^18.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "publishConfig": {
     "access": "public",
     "main": "lib/index.js"
-  },
-  "jest": {
-    "verbose": true,
-    "testTimeout": 15000,
-    "maxWorkers": 1,
-    "transform": {
-      "^.+\\.tsx?$": [
-        "ts-jest",
-        {
-          "tsconfig": "tsconfig.json"
-        }
-      ]
-    },
-    "testRegex": "(/src/.*|(\\.|/)(test|spec)+)\\.test\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "preset": "ts-jest"
   }
 }
