--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,19 +27,8 @@ jobs:
           - name: "@morpho-org/blue-sdk-viem"
             hardhat: true
 
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-
-      - uses: actions/setup-node@b39b52d1213e96004bfcb1c61a8a6fa8ab84f3e8 # v4.0.1
-        with:
-          node-version-file: .nvmrc
-          cache: yarn
-
-      - run: yarn install --immutable
-
-      - uses: ./.github/workflows/build-test-package.yml
-        with:
-          name: ${{ matrix.package.name }}
-          jest: ${{ matrix.package.jest }}
-          hardhat: ${{ matrix.package.hardhat }}
+    uses: ./.github/workflows/package.yml
+    with:
+      name: ${{ matrix.package.name }}
+      jest: ${{ matrix.package.jest }}
+      hardhat: ${{ matrix.package.hardhat }}
