--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
           - name: morpho-test
             jest: false
             hardhat: false
+          - name: blue-api-sdk
+            jest: false
+            hardhat: false
           - name: blue-sdk
             jest: true
             hardhat: false
