--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morpho-org/blue-sdk",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
   "main": "src/index.ts",
@@ -13,11 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@morpho-org/morpho-ts": "workspace:*",
+    "@morpho-org/morpho-ts": "workspace:^",
     "keccak256": "^1.0.6"
   },
   "devDependencies": {
-    "@morpho-org/morpho-test": "workspace:*",
+    "@morpho-org/morpho-test": "workspace:^",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
     "jest": "^29.7.0",
