--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -23,8 +23,8 @@ jobs:
       - run: yarn version apply
 
       - run: |
-          git config --global user.name '${{ vars.GITHUB_ACTOR }}'
-          git config --global user.email '${{ vars.GITHUB_ACTOR }}@users.noreply.github.com'
+          git config --global user.name '${{ github.actor }}'
+          git config --global user.email '${{ github.actor }}@users.noreply.github.com'
           git commit -am "build(package): bump versions"
           git push
 
