ci(release): fix version apply

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -18,14 +18,14 @@ jobs:
 
       - run: yarn install --immutable
 
-      - run: yarn version check
-
-      - run: yarn version apply
+      - run: |
+          yarn version check
+          yarn version apply --all
 
       - run: |
           git config --global user.name '${{ github.actor }}'
           git config --global user.email '${{ github.actor }}@users.noreply.github.com'
-          git commit -am "build(package): bump versions"
+          git commit -am "build(packages): apply versions"
           git push
 
       - run: |
