--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -18,6 +18,8 @@ jobs:
 
       - run: yarn install --immutable
 
+      - run: yarn lerna version --no-private --sign-git-tag --sign-git-commit --conventional-commits --force-publish
+
       - run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
           yarn run publish --y
