--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "scripts": {
     "postinstall": "husky install",
     "lint": "biome check",
-    "publish": "lerna publish from-package"
+    "publish": "lerna publish from-git"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@lerna-lite/cli": "3.5.1",
     "@lerna-lite/publish": "3.7.1",
+    "@lerna-lite/version": "^3.7.1",
     "husky": "^9.0.11",
     "typescript": "^5.4.5"
   }
