--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@morpho-org/blue-sdk",
-  "version": "1.4.1",
+  "version": "1.4.0",
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "files": [
     "lib"
   ],
@@ -13,11 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@morpho-org/morpho-ts": "workspace:^",
+    "@morpho-org/morpho-ts": "^1.4.0",
     "keccak256": "^1.0.6"
   },
   "devDependencies": {
-    "@morpho-org/morpho-test": "workspace:^",
+    "@morpho-org/morpho-test": "^1.4.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
     "jest": "^29.7.0",
@@ -25,8 +25,7 @@
     "typescript": "^5.4.5"
   },
   "publishConfig": {
-    "access": "public",
-    "main": "lib/index.js"
+    "access": "public"
   },
   "jest": {
     "verbose": true,
@@ -46,5 +45,6 @@
       "ts"
     ],
     "preset": "ts-jest"
-  }
+  },
+  "gitHead": "17b1a46190f11620ae969927aec1c891f9752ca0"
 }
