--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morpho-org/blue-api-sdk",
-  "version": "1.4.0",
+  "version": "1.3.9",
   "author": "Morpho Association <contact@morpho.org>",
   "main": "lib/index.js",
   "files": [
@@ -12,9 +12,9 @@
     "build": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
-    "@morpho-org/blue-sdk": "^1.4.0",
-    "@morpho-org/blue-sdk-ethers": "^1.4.0",
-    "@morpho-org/morpho-ts": "^1.4.0"
+    "@morpho-org/blue-sdk": "workspace:^",
+    "@morpho-org/blue-sdk-ethers": "workspace:^",
+    "@morpho-org/morpho-ts": "workspace:^"
   },
   "devDependencies": {
     "@apollo/client": "^3.11.1",
