--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morpho-org/blue-sdk-ethers",
-  "version": "1.4.0",
+  "version": "1.3.9",
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,15 +14,15 @@
     "test-hardhat": "hardhat test"
   },
   "dependencies": {
-    "@morpho-org/blue-sdk": "^1.4.0",
-    "@morpho-org/morpho-ts": "^1.4.0",
+    "@morpho-org/blue-sdk": "workspace:^",
+    "@morpho-org/morpho-ts": "workspace:^",
     "ethers": "^6.12.1",
     "ethers-multicall-provider": "^6.3.0",
     "ethers-types": "^3.17.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@morpho-org/morpho-test": "^1.4.0",
+    "@morpho-org/morpho-test": "workspace:^",
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@types/chai": "^4.3.14",
@@ -43,8 +43,8 @@
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "@morpho-org/blue-sdk": "^1.4.0",
-    "@morpho-org/morpho-ts": "^1.4.0"
+    "@morpho-org/blue-sdk": "workspace:^",
+    "@morpho-org/morpho-ts": "workspace:^"
   },
   "publishConfig": {
     "access": "public"
