ci(release): remove signature

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run: yarn install --immutable
 
-      - run: yarn lerna version minor --no-private --sign-git-tag --sign-git-commit --conventional-commits --create-release github --generate-release-notes --force-publish --y
+      - run: yarn lerna version minor --no-private --conventional-commits --create-release github --generate-release-notes --force-publish --y
 
       - run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
