--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -44,7 +44,11 @@
   },
   "peerDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
-    "@morpho-org/morpho-ts": "workspace:^"
+    "@morpho-org/morpho-ts": "workspace:^",
+    "ethers": "^6.12.1",
+    "ethers-multicall-provider": "^6.3.0",
+    "ethers-types": "^3.17.1",
+    "rxjs": "^7.8.1"
   },
   "publishConfig": {
     "access": "public"
@@ -67,6 +71,5 @@
       "ts"
     ],
     "preset": "ts-jest"
-  },
-  "gitHead": "17b1a46190f11620ae969927aec1c891f9752ca0"
+  }
 }
