--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.0",
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "files": [
     "lib"
   ],
@@ -13,18 +13,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "@morpho-org/morpho-ts": "workspace:^",
     "keccak256": "^1.0.6"
   },
   "devDependencies": {
     "@morpho-org/morpho-test": "workspace:^",
+    "@morpho-org/morpho-ts": "workspace:^",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.2",
     "typescript": "^5.4.5"
   },
+  "peerDependencies": {
+    "@morpho-org/morpho-ts": "workspace:^"
+  },
   "publishConfig": {
+    "main": "lib/index.js",
     "access": "public"
   },
   "jest": {
