--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -14,9 +14,6 @@
     "test-hardhat": "hardhat test"
   },
   "dependencies": {
-    "ethers": "^6.12.1",
-    "ethers-multicall-provider": "^6.3.0",
-    "ethers-types": "^3.17.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -33,6 +30,8 @@
     "@types/sinon-chai": "^3.2.12",
     "chai": "^4.3.10",
     "dotenv": "^16.4.5",
+    "ethers": "^6.12.1",
+    "ethers-types": "^3.17.0",
     "hardhat": "^2.22.6",
     "hardhat-deal": "^3.1.0",
     "jest": "^29.7.0",
@@ -44,7 +43,9 @@
   },
   "peerDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
-    "@morpho-org/morpho-ts": "workspace:^"
+    "@morpho-org/morpho-ts": "workspace:^",
+    "ethers": "^6.0.0",
+    "ethers-types": "^3.17.0"
   },
   "publishConfig": {
     "main": "lib/index.js",
