ci(release): fix version

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -30,7 +30,7 @@ jobs:
 
       - run: yarn install --immutable
 
-      - run: yarn lerna version --no-private --conventional-commits ${{ github.ref != 'refs/heads/main' && '--conventional-prerelease' }} --create-release github --generate-release-notes --y
+      - run: yarn lerna version --no-private --conventional-commits ${{ github.ref != 'refs/heads/main' && '--conventional-prerelease' || '' }} --create-release github --generate-release-notes --y
 
       - run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
