--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -2,6 +2,16 @@ name: Publish on NPM
 
 on:
   workflow_dispatch:
+    inputs:
+      type:
+        type: choice
+        required: true
+        description: Type of release
+        options:
+          - patch
+          - minor
+          - major
+          - prerelease
 
 jobs:
   publish-to-npm:
@@ -30,7 +40,7 @@ jobs:
 
       - run: yarn install --immutable
 
-      - run: yarn lerna version --no-private --conventional-commits ${{ github.ref != 'refs/heads/main' && '--conventional-prerelease' || '--conventional-graduate' }} --create-release github --generate-release-notes --y
+      - run: yarn lerna version ${{ inputs.type }} --no-private --conventional-commits --create-release github --generate-release-notes --y
 
       - run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
