--- a/packages/blue-sdk-viem/package.json
+++ b/packages/blue-sdk-viem/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "prepublish": "yarn build",
+    "compile": "hardhat compile",
     "build": "tsc --build tsconfig.build.json",
     "test": "hardhat test"
   },
@@ -26,7 +27,7 @@
     "chai": "^4.3.10",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
-    "hardhat": "^2.22.6",
+    "hardhat": "^2.22.10",
     "hardhat-deal": "^3.1.0",
     "mocha": "^10.4.0",
     "sinon": "^18.0.0",
