--- a/packages/blue-sdk-simulation/package.json
+++ b/packages/blue-sdk-simulation/package.json
@@ -51,5 +51,9 @@
   "publishConfig": {
     "main": "lib/index.js",
     "access": "public"
+  },
+  "dependencies": {
+    "@morpho-org/blue-sdk-wagmi": "workspace:^",
+    "mutative": "^1.0.8"
   }
 }
