--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -20,15 +20,16 @@
     "@types/chai": "^4.3.14",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.1.0",
+    "@types/react": "^18",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.12",
     "chai": "^4.3.10",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
     "mocha": "^10.4.0",
-    "sinon": "^18.0.0",
+    "react": "^18.3.1",
+    "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
+    "typescript": "^5.6.2",
     "viem": "^2.18.8"
   },
   "peerDependencies": {
