--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@lerna-lite/cli": "3.9.1",
     "@lerna-lite/publish": "3.8.0",
     "@lerna-lite/version": "^3.7.1",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "typescript": "^5.6.2"
   }
 }
