--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
 checksumBehavior: update
 
 yarnPath: .yarn/releases/yarn-4.4.1.cjs
+
+packageExtensions:
+  hardhat-tracer@*:
+    dependencies:
+      "fs-extra": "*"
+      "@nomicfoundation/ethereumjs-util": "*"
