feat(blue-sdk-ethers-liquidation): INTEG-650 - add Pendle support to liquidation bot

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,12 @@
 checksumBehavior: update
 
 yarnPath: .yarn/releases/yarn-4.4.1.cjs
+
+packageExtensions:
+  hardhat-tracer@*:
+    dependencies:
+      "@nomicfoundation/ethereumjs-evm": "*"
+      "@nomicfoundation/ethereumjs-tx": "*"
+      "@nomicfoundation/ethereumjs-util": "*"
+      "@nomicfoundation/ethereumjs-vm": "*"
+      fs-extra: "*"
