--- a/packages/blue-sdk-ethers-liquidation/package.json
+++ b/packages/blue-sdk-ethers-liquidation/package.json
@@ -41,6 +41,7 @@
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.14",
+    "@types/chai-almost": "^1",
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.7.0",
@@ -48,6 +49,7 @@
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.12",
     "chai": "^4.3.10",
+    "chai-almost": "^1.0.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "ethers-multicall-provider": "^6.4.1",
