--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -1,4 +1,5 @@
 name: Publish on NPM
+
 on:
   workflow_dispatch:
     inputs:
@@ -11,10 +12,11 @@ on:
           - minor
           - major
           - prerelease
-      prerelease_id:
+          - custom
+      custom_version:
         type: string
         required: false
-        description: Prerelease identifier (e.g., beta, alpha, rc)
+        description: Custom version (e.g., 1.0.0-unstable.1)
 
 jobs:
   publish-to-npm:
@@ -42,23 +44,19 @@ jobs:
           cache: yarn
 
       - run: yarn install --immutable
-      
-      - name: Run Lerna version
+
+      - name: Version and publish
         run: |
-          VERSION_CMD="yarn lerna version --no-private --conventional-commits --create-release github --generate-release-notes --yes"
-          if [ "${{ inputs.version }}" == "prerelease" ]; then
-            if [ -n "${{ inputs.prerelease_id }}" ]; then
-              VERSION_CMD="$VERSION_CMD prerelease --preid ${{ inputs.prerelease_id }}"
-            else
-              echo "Error: Prerelease identifier is required for prerelease versions"
+          if [ "${{ inputs.version }}" == "custom" ]; then
+            if [ -z "${{ inputs.custom_version }}" ]; then
+              echo "Error: Custom version is required when 'custom' is selected"
               exit 1
             fi
+            yarn lerna version ${{ inputs.custom_version }} --no-git-tag-version --yes --force-publish
+            echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+            yarn lerna publish from-package --yes --dist-tag unstable
           else
-            VERSION_CMD="$VERSION_CMD ${{ inputs.version }}"
+            yarn lerna version ${{ inputs.version }} --no-private --conventional-commits --create-release github --generate-release-notes --yes
+            echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+            yarn run publish --yes
           fi
-          echo "Running command: $VERSION_CMD"
-          $VERSION_CMD
-      - name: Publish to NPM
-        run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          yarn run publish --yes
