--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -22,10 +22,13 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@types/chai": "^4.3.14",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.1.0",
     "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.2",
+    "chai-ts": "^0.0.3",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "ethers-types": "^3.17.0",
