--- a/packages/blue-sdk-viem-bundler/package.json
+++ b/packages/blue-sdk-viem-bundler/package.json
@@ -45,6 +45,7 @@
     "ethers-types": "^3.17.1",
     "hardhat": "^2.22.10",
     "hardhat-deal": "^3.1.0",
+    "hardhat-tracer": "^3.1.0",
     "jest": "^29.6.2",
     "lodash": "^4.17.21",
     "mocha": "^10.4.0",
