--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "incremental": true,
+    "experimentalDecorators": true,
     "jsx": "preserve"
   }
 }
