--- a/packages/blue-sdk-wagmi/tsconfig.build.json
+++ b/packages/blue-sdk-wagmi/tsconfig.build.json
@@ -3,6 +3,5 @@
   "compilerOptions": {
     "rootDir": "src"
   },
-  "include": ["src"],
-  "exclude": ["**/*.(spec|test|fixtures).ts"]
+  "include": ["src"]
 }
