--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -27,10 +27,14 @@
     "@morpho-org/morpho-ts": "workspace:^",
     "@tanstack/query-core": "^5.55.4",
     "@tanstack/react-query": "^5.55.4",
+    "@types/lodash.merge": "^4",
+    "@types/lodash.mergewith": "^4",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@wagmi/core": "^2.13.5",
+    "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ts-node": "^10.9.2",
