--- a/package.json
+++ b/package.json
@@ -8,25 +8,29 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
-  "packageManager": "yarn@4.4.1",
+  "packageManager": "yarn@4.5.0",
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "postinstall": "husky install",
     "lint": "biome check",
-    "test": "vitest",
+    "test": "dotenv -- vitest",
+    "coverage": "vitest run --coverage",
     "publish": "lerna publish from-git"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@lerna-lite/cli": "^3.9.1",
-    "@lerna-lite/publish": "^3.8.0",
-    "@lerna-lite/version": "^3.7.1",
-    "husky": "^9.0.11",
+    "@biomejs/biome": "^1.9.3",
+    "@lerna-lite/cli": "^3.9.2",
+    "@lerna-lite/publish": "^3.9.2",
+    "@lerna-lite/version": "^3.9.2",
+    "@morpho-org/morpho-test": "workspace:^",
+    "@vitest/coverage-v8": "^2.1.2",
+    "dotenv-cli": "^7.4.2",
+    "husky": "^9.1.6",
     "typescript": "^5.6.2",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.2"
   }
 }
