--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -4,45 +4,40 @@
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
   "main": "src/index.ts",
+  "type": "module",
   "files": [
     "lib"
   ],
   "scripts": {
     "prepublish": "yarn build",
     "build": "tsc --build tsconfig.build.json",
-    "test": "hardhat test"
+    "test": "vitest"
   },
   "dependencies": {
     "keccak256": "^1.0.6"
   },
-  "devDependencies": {
-    "@morpho-org/morpho-test": "workspace:^",
-    "@morpho-org/morpho-ts": "workspace:^",
-    "@nomicfoundation/hardhat-ethers": "^3.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
-    "@types/chai": "^4.3.14",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^22.1.0",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.2",
-    "chai-ts": "^0.0.3",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
-    "ethers-types": "^3.17.0",
-    "hardhat": "^2.22.6",
-    "hardhat-deal": "^3.1.0",
-    "hardhat-tracer": "^3.1.0",
-    "mocha": "^10.4.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "vitest": "^2.1.1"
-  },
   "peerDependencies": {
     "@morpho-org/morpho-ts": "workspace:^"
   },
+  "devDependencies": {
+    "@morpho-org/morpho-test": "workspace:^",
+    "@morpho-org/morpho-ts": "workspace:^",
+    "@types/node": "^22.1.0",
+    "dotenv": "^16.4.5",
+    "typescript": "^5.6.2",
+    "viem": "^2.21.18",
+    "viem-deal": "^1.0.5",
+    "vitest": "^2.1.2"
+  },
   "publishConfig": {
     "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "exports": {
+      ".": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      }
+    },
     "access": "public"
   }
 }
