--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -23,7 +23,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.CD_GITHUB_APP_ID }}
+          private-key: ${{ secrets.CD_GITHUB_APP_PRIVATE_KEY }}
+
       - uses: actions/checkout@v4
+        with:
+          token: ${{ steps.app-token.outputs.token }}
 
       - run: |
           git config --global user.name 'github-actions'
