--- a/packages/blue-sdk-viem-simulation/package.json
+++ b/packages/blue-sdk-viem-simulation/package.json
@@ -29,26 +29,18 @@
     "@morpho-org/blue-sdk-wagmi": "workspace:^",
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
+    "@morpho-org/prool-viemtest": "workspace:^",
     "@tanstack/query-core": "^5.55.4",
     "@tanstack/react-query": "^5.55.4",
-    "@types/chai": "^4.3.14",
     "@types/lodash": "^4.17.9",
-    "@types/mocha": "^10.0.6",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@types/sinon": "^17.0.3",
-    "@types/sinon-chai": "^3.2.12",
     "@wagmi/core": "^2.13.5",
-    "chai": "^4.3.10",
-    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
-    "mocha": "^10.4.0",
     "mutative": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sinon": "^19.0.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "viem": "^2.21.18",
     "vitest": "^2.1.2",
