--- a/package.json
+++ b/package.json
@@ -26,14 +26,11 @@
     "@lerna-lite/cli": "^3.9.2",
     "@lerna-lite/publish": "^3.9.2",
     "@lerna-lite/version": "^3.9.2",
-    "@morpho-org/morpho-test": "workspace:^",
     "@vitest/coverage-v8": "^2.1.2",
     "dotenv-cli": "^7.4.2",
+    "happy-dom": "^15.7.4",
     "husky": "^9.1.6",
-    "prool": "^0.0.16",
     "typescript": "^5.6.2",
-    "viem": "^2.21.18",
-    "viem-deal": "^1.0.5",
     "vitest": "^2.1.2"
   }
 }
