--- a/packages/blue-sdk-viem-simulation/package.json
+++ b/packages/blue-sdk-viem-simulation/package.json
@@ -16,10 +16,10 @@
     "@morpho-org/blue-sdk-viem": "workspace:^",
     "@morpho-org/blue-sdk-wagmi": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
-    "@tanstack/react-query": ">=5.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "mutative": "^1.0.8",
-    "react": ">=18",
-    "typescript": ">=5.0.4",
+    "react": "^18.0.0",
+    "typescript": "^5.0.4",
     "viem": "^2.0.0",
     "wagmi": "^2.12.10"
   },
@@ -29,9 +29,9 @@
     "@morpho-org/blue-sdk-wagmi": "workspace:^",
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
-    "@morpho-org/prool-viemtest": "workspace:^",
-    "@tanstack/query-core": "^5.55.4",
-    "@tanstack/react-query": "^5.55.4",
+    "@morpho-org/test": "workspace:^",
+    "@tanstack/query-core": "^5.59.0",
+    "@tanstack/react-query": "^5.59.0",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.1",
@@ -42,9 +42,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.2",
-    "viem": "^2.21.18",
+    "viem": "^2.21.19",
     "vitest": "^2.1.2",
-    "wagmi": "^2.12.16"
+    "wagmi": "^2.12.17"
   },
   "publishConfig": {
     "main": "lib/index.js",
