--- a/packages/blue-sdk-viem/package.json
+++ b/packages/blue-sdk-viem/package.json
@@ -23,10 +23,10 @@
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
-    "@morpho-org/prool-viemtest": "workspace:^",
+    "@morpho-org/test": "workspace:^",
     "@types/node": "^22.1.0",
     "typescript": "^5.6.2",
-    "viem": "^2.21.18",
+    "viem": "^2.21.19",
     "vitest": "^2.1.2"
   },
   "publishConfig": {
