--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -16,8 +16,8 @@
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/blue-sdk-viem": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
-    "@tanstack/react-query": ">=5.0.0",
-    "react": ">=18",
+    "@tanstack/react-query": "^5.0.0",
+    "react": "^18.0.0",
     "viem": "^2.0.0",
     "wagmi": "^2.12.10"
   },
@@ -25,8 +25,11 @@
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/blue-sdk-viem": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
+    "@morpho-org/test": "workspace:^",
     "@tanstack/query-core": "^5.55.4",
-    "@tanstack/react-query": "^5.55.4",
+    "@tanstack/react-query": "^5.59.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/lodash.merge": "^4",
     "@types/lodash.mergewith": "^4",
     "@types/node": "^22.1.0",
@@ -37,11 +40,10 @@
     "lodash.mergewith": "^4.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "viem": "^2.21.18",
+    "viem": "^2.21.19",
     "vitest": "^2.1.2",
-    "wagmi": "^2.12.16"
+    "wagmi": "^2.12.17"
   },
   "publishConfig": {
     "main": "lib/index.js",
