test(simulation): make them pass

--- a/biome.json
+++ b/biome.json
@@ -40,7 +40,8 @@
       },
       "suspicious": {
         "useGetterReturn": "off",
-        "noAssignInExpressions": "off"
+        "noAssignInExpressions": "off",
+        "noFallthroughSwitchClause": "off"
       }
     }
   }
