--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -2,6 +2,7 @@
   "name": "@morpho-org/blue-api-sdk",
   "version": "2.0.0-alpha.6",
   "author": "Morpho Association <contact@morpho.org>",
+  "type": "module",
   "main": "src/index.ts",
   "files": [
     "lib"
@@ -31,6 +32,13 @@
   },
   "publishConfig": {
     "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "exports": {
+      ".": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      }
+    },
     "access": "public"
   }
 }
