--- a/packages/blue-sdk-ethers/package.json
+++ b/packages/blue-sdk-ethers/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-alpha.6",
   "author": "Morpho Association <contact@morpho.org>",
   "license": "MIT",
+  "type": "module",
   "main": "src/index.ts",
   "files": [
     "lib"
@@ -46,6 +47,13 @@
   },
   "publishConfig": {
     "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "exports": {
+      ".": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      }
+    },
     "access": "public"
   }
 }
